--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   margin: 15px auto;
   padding: 15px;
-  width: 1024px;
+  width: 900px;
   font-family: Verdana, sans-serif;
   box-shadow: 10px 10px 40px -1px rgba(0, 0, 0, 0.3);
 }
@@ -44,14 +44,35 @@ main h2 {
   padding-top: 20px;
 }
 
-.contact {
+main section {
   margin-left: auto;
   margin-right: auto;
+}
+
+.contact {
   width: 300px;
 }
 
 .about-me {
-  margin-left: auto;
-  margin-right: auto;
   width: 400px;
+}
+
+.skills {
+  width: 550px;
+}
+
+.code-example {
+  width: 700px;
+}
+
+.projects {
+  width: 400px;
+}
+
+.education {
+  width: 500px;
+}
+
+.languages {
+  width: 300px;
 }
